@@ -1,3 +1,8 @@
+2002-12-13  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* tests/version7.test: Require GNU make.
+	Reported by Patrick Welche.
+
 2002-12-11  Brian Ford  <ford@vss.fsi.com>
 
 	* m4/init.m4 (AM_INIT_AUTOMAKE): Properly quote AC_PACKAGE_TARNAME
